[package]
name = "timeleft"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Calculate relative time passed, left and percentage for a point in a time window"
repository = "https://github.com/jonilappalainen/timeleft"
homepage = "https://github.com/jonilappalainen/timeleft"

[dependencies]
chrono = "0.4.23"
